# XEMM_CROSS_EXCHANGE_MARKET_MAKING_PACIFICA_HYPERLIQUID

./: .env.example  Cargo.toml  README.md  config.json
analysis_outputs/: 2026-04-14-0745-0844-continuous-summary.txt  2026-04-14-1300-1530-spread-summary.txt  2026-04-14-clusdt_xyz_cl-spread-summary.txt
docs/: AWS_TOKYO_RUNBOOK.md  binance_2026-04-14_0530-0730_bjt_spread_history.csv  binance_2026-04-14_1330-1530_bjt_spread_history.csv  binance_2026-04-14_1940-2026-04-15_0036_bjt_spread_history.csv  binance_2026-04-15_1048-2026-04-15_1303_bjt_spread_history.csv  dual_mode_strategy.md  hyperparameter_calibration_2026-04-14.md  normal_mode_redesign_analysis.md  spread_analysis_4cases.md
docs/case_2026-04-14_1940-2026-04-15_0026_bjt/: analysis_summary.md  binance_2026-04-14_1940-2026-04-15_0026_bjt_fills.csv  case_meta.txt  clusdt_orders.csv  hl_2207_order_investigation_report.md  hyperliquid_2026-04-14_1940-2026-04-15_0026_bjt_orders.csv  xyz_cl_fills.csv
scripts/aws/: setup_tokyo_xemm.sh  update_and_restart_xemm.sh
src/: app.rs  audit_logger.rs  config.rs  lib.rs  trade_fetcher.rs
src/bot/: mod.rs  state.rs
src/connector/: maker.rs  mod.rs
src/connector/binance/: mod.rs  trading.rs  user_stream.rs
src/connector/hyperliquid/: trading.rs  types.rs
src/services/: binance_fill_detection.rs  fill_detection.rs  hedge.rs  mod.rs  order_monitor.rs  position_monitor.rs  rest_fill_detection.rs  rest_poll.rs  spread_recorder.rs
src/strategy/: funding.rs  mod.rs  regime.rs  spread_stats.rs
src/util/: api_health.rs  mod.rs  rate_limit.rs
(+1 files in other folders)
