[package]
name = "xemm_rust"
version = "0.1.0"
edition = "2021"
default-run = "xemm_rust"

[lib]
name = "xemm_rust"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
futures-util = "0.3"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
serde_urlencoded = "0.7"
ed25519-dalek = "2.1"
bs58 = "0.5"
dotenv = "0.15"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = "0.4"
csv = "1.3"
ethers = { version = "2.0", features = ["legacy"] }
rmp-serde = "1.1"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
colored = "2.1"
parking_lot = "0.12"
crossfire = "2.1"
bloomfilter = "1.0"
fast-float = "0.2"
